# oatpp-ssdp

./: CMakeLists.txt  README.md  azure-pipelines.yml
src/: CMakeLists.txt
src/oatpp-ssdp/: ConnectionHandler.cpp  ConnectionHandler.hpp  Message.cpp  Message.hpp  MessageProvider.cpp  MessageProvider.hpp  SimpleSsdpUdpStreamProvider.cpp  SimpleSsdpUdpStreamProvider.hpp  SimpleUdpStreamProvider.cpp  SimpleUdpStreamProvider.hpp  SsdpMessage.cpp  SsdpMessage.hpp  SsdpStreamHandler.cpp  SsdpStreamHandler.hpp  UDPStream.cpp  UDPStream.hpp  UDPStreamProvider.cpp  UDPStreamProvider.hpp  UdpStream.cpp  UdpStream.hpp  UdpStreamProvider.cpp  UdpStreamProvider.hpp
test/: CMakeLists.txt
test/oatpp-ssdp/: tests.cpp
utility/: module-uninstall.sh
